# inverso-bot-ai

./: README.md  langgraph.json  onboarding_state.json  pyproject.toml
app/: config.py  dependencies.py  main.py  models.py
app/activity/: agent.py  create.py  create_from_concepts.py  create_from_onboarding.py  dependencies.py  models.py  repository.py  router.py
app/agents/: activity.py  onboarding.py
app/agents/activity/: agent.py  create.py
app/database/: dependencies.py  models.py  session.py
app/onboarding/: agent.py  dependencies.py  router.py
scripts/: generate_public_activities.py
